# project-template

./: .gitignore  CMakeLists.txt  README.md
res/: main-template.txt  module-file-template.txt  module-template.txt
src/: args_parser.cppm  command.cppm  config.cppm  create_cmake_file.cppm  main.cpp  param.cppm
